# easy_serve

./: .gitignore  README.md  license  pyproject.toml  requirements.txt
.github/workflow/: build.yml  python-app.yaml  python-app.yml
.github/workflows/: python-app.yml
src/easy_serve/: __init__.py  server.py
test/: conftest.py  test_server.py
